# juniper-mist-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
.gsd/: DECISIONS.md  PROJECT.md  REQUIREMENTS.md  STATE.md  completed-units.json  gsd.db-shm  gsd.db-wal  metrics.json  preferences.md
.gsd/activity/: 001-research-slice-M001-S01.jsonl
.gsd/milestones/M001/: M001-CONTEXT.md  M001-ROADMAP.md  M001-SUMMARY.md
.gsd/milestones/M001/slices/S01/: S01-ASSESSMENT.md  S01-PLAN.md  S01-RESEARCH.md  S01-SUMMARY.md  S01-UAT.md
.gsd/milestones/M001/slices/S01/tasks/: T01-PLAN.md  T01-SUMMARY.md  T02-PLAN.md  T02-SUMMARY.md
.gsd/milestones/M001/slices/S02/: S02-ASSESSMENT.md  S02-PLAN.md  S02-RESEARCH.md  S02-SUMMARY.md  S02-UAT.md
.gsd/milestones/M001/slices/S02/tasks/: T01-PLAN.md  T01-SUMMARY.md  T02-PLAN.md  T02-SUMMARY.md  T03-PLAN.md  T03-SUMMARY.md
.gsd/milestones/M001/slices/S03/: S03-ASSESSMENT.md  S03-PLAN.md  S03-RESEARCH.md  S03-SUMMARY.md  S03-UAT-RESULT.md  S03-UAT.md
.gsd/milestones/M001/slices/S03/tasks/: T01-PLAN.md  T01-SUMMARY.md  T02-PLAN.md  T02-SUMMARY.md  T03-PLAN.md  T03-SUMMARY.md  T04-PLAN.md  T04-SUMMARY.md
.gsd/milestones/M001/slices/S04/: S04-ASSESSMENT.md  S04-PLAN.md  S04-RESEARCH.md  S04-SUMMARY.md  S04-UAT-RESULT.md  S04-UAT.md
.gsd/milestones/M001/slices/S04/tasks/: T01-PLAN.md  T01-SUMMARY.md  T02-PLAN.md  T02-SUMMARY.md  T03-PLAN.md  T03-SUMMARY.md  T04-PLAN.md  T04-SUMMARY.md
.gsd/milestones/M001/slices/S05/: S05-ASSESSMENT.md  S05-PLAN.md  S05-RESEARCH.md  S05-SUMMARY.md  S05-UAT-RESULT.md  S05-UAT.md
.gsd/milestones/M001/slices/S06/: S06-PLAN.md  S06-RESEARCH.md  S06-SUMMARY.md  S06-UAT.md
docs/: msp-deployment.md
mist_mcp/: __init__.py  __main__.py  config.py  server.py  session.py
scripts/: verify_s01.sh  verify_s02.sh  verify_s03.sh  verify_s04.sh  verify_s05.sh  verify_s06.sh
tests/: test_config.py  test_rate_limit.py  test_server.py
(+17 files in other folders)
