[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-mist-mcp"
version = "0.1.0"
description = "MCP server for managing Juniper Mist networks with AI assistants"
license = "Apache-2.0"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    {name = "Vahagn Madatyan"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "fastmcp>=2.5.1",
    "mistapi>=0.61.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/vahagn-madatyan/juniper-mist-mcp"
Repository = "https://github.com/vahagn-madatyan/juniper-mist-mcp"
Issues = "https://github.com/vahagn-madatyan/juniper-mist-mcp/issues"

[project.scripts]
juniper-mist-mcp = "mist_mcp.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
